# PathTracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Folder.DotSettings
libs/imgui/: CMakeLists.txt
libs/pcg-cpp/: CMakeLists.txt
libs/stb/: CMakeLists.txt
presenter/: CMakeLists.txt
presenter/src/: assert.hpp  defer.hpp  gl.cpp  gl.hpp  log.hpp  main.cpp  render_worker.cpp  render_worker.hpp  timer.hpp  ui.hpp
presenter/src/gl/: shader.cpp
tracer/: CMakeLists.txt
tracer/include/tracer/: assert.hpp  camera.hpp  common.hpp  core.hpp  defer.hpp  geometric.hpp  gl.hpp  numeric.hpp  object.hpp  random.hpp  ray.hpp  render.hpp  renderer.hpp  software_renderer.hpp  trigonometric.hpp
tracer/src/: camera.cpp  core.cpp  gl.cpp  object.cpp  random.cpp  render.cpp  renderer.cpp  software_renderer.cpp
